[gd_scene load_steps=12 format=3 uid="uid://d3u5mdb0d3110"]

[ext_resource type="Texture2D" uid="uid://mibs4jii822c" path="res://player_related/tex_text_box.png" id="1_domdl"]
[ext_resource type="Script" path="res://title/script_option_menu.gd" id="1_ia65k"]
[ext_resource type="LabelSettings" uid="uid://bdxtw162r24p7" path="res://user_interface/base_font.tres" id="2_8p8qi"]
[ext_resource type="FontFile" uid="uid://b6nqix3g6iv3i" path="res://user_interface/pixelfont.ttf" id="2_cqyl1"]
[ext_resource type="Texture2D" uid="uid://dde7jjkv14a2i" path="res://title/tex_bg_option.png" id="2_tkppn"]
[ext_resource type="PackedScene" uid="uid://dohogg1b38b42" path="res://title/scn_bob_option.tscn" id="34_sgu8f"]

[sub_resource type="LabelSettings" id="LabelSettings_3uauj"]
line_spacing = 8.0
font = ExtResource("2_cqyl1")
font_size = 8

[sub_resource type="Animation" id="Animation_1pyju"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uig1m"]
resource_name = "close"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jj3e6"]
resource_name = "open"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b2jr3"]
_data = {
"RESET": SubResource("Animation_1pyju"),
"close": SubResource("Animation_uig1m"),
"open": SubResource("Animation_jj3e6")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ia65k")

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.9, 0.9)
scroll_offset = Vector2(0, 128)
repeat_size = Vector2(128, 0)
autoscroll = Vector2(-32, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(128, 0)
texture = ExtResource("2_tkppn")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_right = 256.0
offset_bottom = 256.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 160.0
offset_bottom = 112.0
texture = ExtResource("1_domdl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 104.0
text = "rapide<
jeu<
vidÃ©o<
audio<
soundtest<
retour<"
label_settings = SubResource("LabelSettings_3uauj")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
offset_top = 112.0
offset_right = 256.0
offset_bottom = 216.0
texture = ExtResource("1_domdl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label2" type="Label" parent="NinePatchRect2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 104.0
text = "RAPIDE :

difficulter : <

  facile<
  normale<
  difficile<

audio global :<

  100%<
"
label_settings = ExtResource("2_8p8qi")

[node name="NinePatchRect4" type="NinePatchRect" parent="."]
offset_left = 160.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 112.0
texture = ExtResource("1_domdl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="reset" type="Sprite2D" parent="NinePatchRect4"]
position = Vector2(48, 48)

[node name="soundtest_music" type="AudioStreamPlayer2D" parent="."]

[node name="reset" type="AudioStreamPlayer" parent="soundtest_music"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b2jr3")
}

[node name="Node2D" parent="." instance=ExtResource("34_sgu8f")]
position = Vector2(40, 240)
